# ISs-235

./: Test.txt  readme.txt
АнтиповЕвгенийВасильевич/Моделирование программных модулей. Основные нотации. Модели, используемые для отображения структуры и содержание программного модуля./: 1.Анализ предметной области.docx  RamusProject.rsf
АнтиповЕвгенийВасильевич/Рамус/: Практическая.rsf
АнтиповЕвгенийВасильевич/Тесты/: Yandex.docx  YandexGPT.docx  Профориентационное задание "Профессии в анализе данных".docx
БелугинаСветланаВладимировна/Лабораторная1/: ЛР1_ГавваММ.docx  Разработка ПО.pod  шаблон рамки ЛР.doc
БелугинаСветланаВладимировна/Лабораторная1/ГавваММ/: ЛР1+СР_ГавваММ.docx  Разработка ПО.pod  СР_ГавваММ.pod
БелугинаСветланаВладимировна/Лабораторная2/: ЛР_2.docx  ЛР_2_Гавва.docx
БелугинаСветланаВладимировна/Лабораторная8/: ЛР_8.docx
БелугинаСветланаВладимировна/Лабораторная8/LR8GAVVA/: CMakeLists.txt  main.cpp
БелугинаСветланаВладимировна/Лабораторная8/build-LR8GAVVA-Desktop-Debug/: CMakeCache.txt  LR8GAVVA  Makefile  cmake_install.cmake  qtcsettings.cmake
БелугинаСветланаВладимировна/Лабораторная9/: ЛР_9.docx  ЛабораторнаяРабота9.docx
БелугинаСветланаВладимировна/Практическая1/: ПР_1.docx  Скриншоты.docx  шаблон рамки ПР.doc
БелугинаСветланаВладимировна/Практическая1/QtCode/: CMakeLists.txt  main.cpp
БелугинаСветланаВладимировна/Практическая1/build-QtCode-Desktop-Debug/: CMakeCache.txt  Makefile  QtCode  cmake_install.cmake  qtcsettings.cmake
МакарчукРоманСергеевич/: Аукционный дом.mdj
(+19 files in other folders)
