cmake_minimum_required(VERSION 3.5)

project(LR8GAVVA LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(LR8GAVVA main.cpp)

include(GNUInstallDirs)
install(TARGETS LR8GAVVA
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
